# 2025-Anhui-AI-Speech-Technology-Competition

./: .gitignore  ASR_实现报告.md  ASR性能优化报告.md  Dockerfile  README_CN.md  README_XUNFEI.md  asr_result.txt  asr_result_wav.txt  audio_process.ipynb  emo_dataset_split.py  emotion_bilstm.py  emotion_cnn.py  emotion_dataset.py  emotion_transformer.py  infer_emotion.py  main.py  numpy_playground.ipynb  pyproject.toml  task-1.ipynb  task-3-grader.py  tasks-sample-demo.ipynb  tasks-sample.ipynb  train_emotion.py  xunfei_asr.py  xunfei_auth.py  xunfei_tts.py  讯飞ASR技术分析.md
speechscore/: __init__.py  basis.py
speechscore/scores/dnsmos/: dnsmos.py
speechscore/scores/srmr/: cal_srmr.py  srmr.py
