[project]
name = "2025-aasic-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "clearvoice>=0.1.1",
    "fastapi[standard]>=0.116.1",
    "gammatone>=1.0.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "museval>=0.4.1",
    "notebook>=7.4.3",
    "onnxruntime>=1.22.1",
    "resampy>=0.4.3",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.19.9",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
